--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
         <title>Sesiones con AngularJs y Php</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- inject:css -->
+        <link rel="stylesheet" href="css/main.css">
+        <!-- endinject -->
 
         <!-- Place favicon.ico in the root directory -->
     </head>
@@ -15,7 +18,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-
+        
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -25,5 +28,8 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
+        <!-- inject:js -->
+        <script src="js/app.js"></script>
+        <!-- endinject -->
     </body>
 </html>
