--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
         <title>Sesiones con AngularJs y Php</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- bower:css -->
+        <!-- endbower -->
         <!-- inject:css -->
         <link rel="stylesheet" href="css/main.css">
         <!-- endinject -->
@@ -28,6 +30,9 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
+        <!-- bower:js -->
+        <script src="includes/lib/angular/angular.js"></script>
+        <!-- endbower -->
         <!-- inject:js -->
         <script src="js/app.js"></script>
         <!-- endinject -->
