--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
         <!-- endbower -->
         <!-- inject:js -->
         <script src="js/app.js"></script>
+        <script src="js/directives.js"></script>
         <!-- endinject -->
     </body>
 </html>
